--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2025.7.14
 charset-normalizer==3.4.2
 Django==5.2.4
 djangorestframework==3.16.0
+drf-spectacular==0.27.2
 idna==3.10
 pillow==11.3.0
 requests==2.32.4
